# test-vinoshipper

./: .gitattributes  .gitignore  ARCHITECTURE.md  CREDENTIALS.md  DEV.md  FIXES_APPLIED.md  README.md  index.html  multi-account-proto.tsx  package-lock.json  package.json  reshot-icon-wine-transport-RMVBTH7EU4.svg:Zone.Identifier  tsconfig.json  vinoshipper-inventory-agent-2.tsx  vinoshipper-inventory-agent.tsx  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CREDENTIALS.md  DEV.md  INSTALLATION.md  TESTING.md
prototypes/: vinoshipper-inventory-agent-3.tsx  vinoshipper-inventory-agent-4.tsx
src/: VinoshipperAgent.tsx  constants.ts  index.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/client/: VinoshipperClient.ts
src/components/: ChatInterface.tsx  ClientManager.tsx  Header.tsx  InventoryPanel.tsx  Settings.tsx  SimpleActionBar.tsx  index.ts
src/hooks/: index.ts  useClients.test.ts  useClients.ts  useConfiguration.test.ts  useConfiguration.ts  useInventory.ts  useMessages.ts  useSyncLogs.ts
src/services/: agentService.ts  claudeService.ts  index.ts  inventoryCache.ts  keyringService.test.ts  keyringService.ts  mockClaudeService.ts  syncService.ts
src/test/: setup.ts
src/utils/: csvParser.ts
